--- a/2-Regression/2-Data/notebook.ipynb
+++ b/2-Regression/2-Data/notebook.ipynb
@@ -1,5 +1,248 @@
 {
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/us-pumpkins.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City Name</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Package</th>\n",
+       "      <th>Variety</th>\n",
+       "      <th>Sub Variety</th>\n",
+       "      <th>Grade</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Low Price</th>\n",
+       "      <th>High Price</th>\n",
+       "      <th>Mostly Low</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unit of Sale</th>\n",
+       "      <th>Quality</th>\n",
+       "      <th>Condition</th>\n",
+       "      <th>Appearance</th>\n",
+       "      <th>Storage</th>\n",
+       "      <th>Crop</th>\n",
+       "      <th>Repack</th>\n",
+       "      <th>Trans Mode</th>\n",
+       "      <th>Unnamed: 24</th>\n",
+       "      <th>Unnamed: 25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BALTIMORE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24 inch bins</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4/29/17</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BALTIMORE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24 inch bins</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5/6/17</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BALTIMORE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24 inch bins</td>\n",
+       "      <td>HOWDEN TYPE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9/24/16</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BALTIMORE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24 inch bins</td>\n",
+       "      <td>HOWDEN TYPE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9/24/16</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BALTIMORE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24 inch bins</td>\n",
+       "      <td>HOWDEN TYPE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11/5/16</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City Name Type       Package      Variety Sub Variety  Grade     Date  \\\n",
+       "0  BALTIMORE  NaN  24 inch bins          NaN         NaN    NaN  4/29/17   \n",
+       "1  BALTIMORE  NaN  24 inch bins          NaN         NaN    NaN   5/6/17   \n",
+       "2  BALTIMORE  NaN  24 inch bins  HOWDEN TYPE         NaN    NaN  9/24/16   \n",
+       "3  BALTIMORE  NaN  24 inch bins  HOWDEN TYPE         NaN    NaN  9/24/16   \n",
+       "4  BALTIMORE  NaN  24 inch bins  HOWDEN TYPE         NaN    NaN  11/5/16   \n",
+       "\n",
+       "   Low Price  High Price  Mostly Low  ...  Unit of Sale Quality Condition  \\\n",
+       "0      270.0       280.0       270.0  ...           NaN     NaN       NaN   \n",
+       "1      270.0       280.0       270.0  ...           NaN     NaN       NaN   \n",
+       "2      160.0       160.0       160.0  ...           NaN     NaN       NaN   \n",
+       "3      160.0       160.0       160.0  ...           NaN     NaN       NaN   \n",
+       "4       90.0       100.0        90.0  ...           NaN     NaN       NaN   \n",
+       "\n",
+       "  Appearance Storage  Crop Repack  Trans Mode  Unnamed: 24  Unnamed: 25  \n",
+       "0        NaN     NaN   NaN      E         NaN          NaN          NaN  \n",
+       "1        NaN     NaN   NaN      E         NaN          NaN          NaN  \n",
+       "2        NaN     NaN   NaN      N         NaN          NaN          NaN  \n",
+       "3        NaN     NaN   NaN      N         NaN          NaN          NaN  \n",
+       "4        NaN     NaN   NaN      N         NaN          NaN          NaN  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -10,24 +253,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
+  "orig_nbformat": 2
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ]
+ "nbformat_minor": 2
 }
